--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@
 *.tar.gz
 *.rar
 
+# But do not ignore the Gradle Wrapper JAR file
+!gradle/wrapper/gradle-wrapper.jar
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
