--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ yarn_mappings=1.21.2-rc1+build.1
 loader_version=0.16.7
 
 # Mod Properties
-mod_version=1.0.2+1.21.2-Snapshot
+mod_version=1.0.2+1.21.2-snapshot
 maven_group=max.betterrockets
 archives_base_name=better-rockets
 
