--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,14 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.2-rc1
-yarn_mappings=1.21.2-rc1+build.1
+minecraft_version=1.21.2
+yarn_mappings=1.21.2+build.1
 loader_version=0.16.7
 
 # Mod Properties
-mod_version=1.0.2+1.21.2-snapshot
+mod_version=1.0.2+1.21.2
 maven_group=max.betterrockets
 archives_base_name=better-rockets
 
 # Dependencies
-fabric_version=0.106.0+1.21.2
+fabric_version=0.106.1+1.21.2
